dataset1235/2025-2/2318198438/users/1240871306/executions/3334494446_1319609354.log
== SUBMISSION (2025-08-28 00:26:07)
-- CODE: 
n1 = float((input))
n2 = float((input)

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float((input)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float((input)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float((input)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float((input)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float((input)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float((input)
              ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:22:24)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:23:00)
-- CODE: 
n1 = float((input))
n2 = float((input))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:33:15)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:22:15)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:32:53)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:23:01)
-- CODE: 
n1 = float((input))
n2 = float((input))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float((input))
         ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
